--- a/reset.css
+++ b/reset.css
@@ -19,7 +19,7 @@ time, mark, audio, video, button {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+	vertical-align: middle;
 }
 body {
 	line-height: 1;
